--- a/app/src/main/res/layout/content_my.xml
+++ b/app/src/main/res/layout/content_my.xml
@@ -2,17 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_my">
 
-    <EditText android:id="@+id/edit_message"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/edit_message" />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_today"
+        android:text="Yesterday's Crimes"
         android:onClick="getCrimes" />
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id = "@+id/header_table"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:stretchColumns="*"
+        android:divider="@android:color/transparent"
+        android:padding="5dp">
+
+        <TableRow android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/reportNumber"
+                android:text="Report Number"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/incident"
+                android:text="Incident Type"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/location"
+                android:text="Location"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/description"
+                android:text="Description"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                />
+        </TableRow>
+    </TableLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TableLayout
+            android:id="@+id/off_campus"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:stretchColumns="*">
+        </TableLayout>
+    </ScrollView>
+
 </LinearLayout>
