--- a/app/src/main/res/layout/content_my.xml
+++ b/app/src/main/res/layout/content_my.xml
@@ -9,7 +9,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Yesterday's Crimes"
+        android:text="Yesterday's Off-Campus Crimes"
         android:onClick="getCrimes" />
 
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,24 +24,28 @@
             <TextView
                 android:id="@+id/reportNumber"
                 android:text="Report Number"
+                android:gravity="left"
                 android:textStyle="bold"
                 android:layout_height="wrap_content"
                 />
             <TextView
                 android:id="@+id/incident"
                 android:text="Incident Type"
+                android:gravity="left"
                 android:textStyle="bold"
                 android:layout_height="wrap_content"
                 />
             <TextView
                 android:id="@+id/location"
                 android:text="Location"
+                android:gravity="left"
                 android:textStyle="bold"
                 android:layout_height="wrap_content"
                 />
             <TextView
                 android:id="@+id/description"
                 android:text="Description"
+                android:gravity="left"
                 android:textStyle="bold"
                 android:layout_height="wrap_content"
                 />
@@ -55,6 +59,7 @@
             android:id="@+id/off_campus"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:gravity="center"
             android:stretchColumns="*">
         </TableLayout>
     </ScrollView>
