--- a/app/src/main/res/layout/content_my.xml
+++ b/app/src/main/res/layout/content_my.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_my">
+
 
     <Button
         android:layout_width="match_parent"
@@ -57,6 +59,64 @@
         android:layout_height="wrap_content">
         <TableLayout
             android:id="@+id/off_campus"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:stretchColumns="*">
+        </TableLayout>
+    </ScrollView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Yesterday's On-Campus Crimes"
+        android:onClick="getCrimes" />
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id = "@+id/onHeader_table"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:stretchColumns="*"
+        android:divider="@android:color/transparent"
+        android:padding="5dp">
+
+        <TableRow android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/onReportNumber"
+                android:text="Report Number"
+                android:gravity="left"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/onIncident"
+                android:text="Incident Type"
+                android:gravity="left"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/onLocation"
+                android:text="Location"
+                android:gravity="left"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/onDescription"
+                android:text="Description"
+                android:gravity="left"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                />
+        </TableRow>
+    </TableLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TableLayout
+            android:id="@+id/on_campus"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center"
