Added datepicker to app so user can search for crimes on different dates.

--- a/app/src/main/res/menu/menu_my.xml
+++ b/app/src/main/res/menu/menu_my.xml
@@ -1,6 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MyActivity">
+
+    <item
+        android:id="@+id/pick_date"
+        android:icon="@drawable/date_icon"
+        android:title="Date"
+        app:showAsAction="ifRoom"/>
+
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
