--- a/app/src/main/res/layout/content_my.xml
+++ b/app/src/main/res/layout/content_my.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_my">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="?android:attr/actionBarSize">
 
+    <LinearLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_my">
 
-    <Button
-        android:id = "@+id/offCampus_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:onClick="getCrimes" />
+        <Button
+            android:id = "@+id/offCampus_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:onClick="getCrimes" />
 
-    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id = "@+id/offHeader_table"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stretchColumns="*"
-        android:divider="@android:color/transparent"
-        android:padding="5dp">
-    </TableLayout>
+        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id = "@+id/offHeader_table"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:stretchColumns="*"
+            android:divider="@android:color/transparent"
+            android:padding="5dp">
+        </TableLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
         <TableLayout
             android:id="@+id/off_campus"
             android:layout_height="wrap_content"
@@ -34,27 +35,23 @@
             android:gravity="center"
             android:stretchColumns="*">
         </TableLayout>
-    </ScrollView>
 
-    <Button
-        android:layout_width="match_parent"
-        android:id = "@+id/onCampus_button"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:onClick="getCrimes" />
+        <Button
+            android:layout_width="match_parent"
+            android:id = "@+id/onCampus_button"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:onClick="getCrimes" />
 
-    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id = "@+id/onHeader_table"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stretchColumns="*"
-        android:divider="@android:color/transparent"
-        android:padding="5dp">
-    </TableLayout>
+        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id = "@+id/onHeader_table"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:stretchColumns="*"
+            android:divider="@android:color/transparent"
+            android:padding="5dp">
+        </TableLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
         <TableLayout
             android:id="@+id/on_campus"
             android:layout_height="wrap_content"
@@ -62,6 +59,5 @@
             android:gravity="center"
             android:stretchColumns="*">
         </TableLayout>
-    </ScrollView>
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
