--- a/app/src/main/res/layout/activity_map_fragment.xml
+++ b/app/src/main/res/layout/activity_map_fragment.xml
@@ -9,4 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.SupportMapFragment" />
+
+    <Button
+        android:id = "@+id/back_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:enabled="true"
+        android:textColor="#000000"
+        android:onClick="onClick"
+        android:textAllCaps="false"/>
 </LinearLayout>
