--- a/app/src/main/res/layout/content_my.xml
+++ b/app/src/main/res/layout/content_my.xml
@@ -25,6 +25,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="-5dp"
+            android:layout_marginBottom="-5dp"
+            android:includeFontPadding="false"
             android:gravity="left"
             android:textSize="20sp" />
 
@@ -57,6 +60,9 @@
             android:id="@+id/on_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:layout_marginTop="-5dp"
+            android:layout_marginBottom="-5dp"
             android:layout_alignParentTop="true"
             android:gravity="left"
             android:textSize="20sp" />
