Removed notifications. They were buggy and not working correctly so I removed them. I also added a link to definitions on the AwareOSU github page in the actionbar.

--- a/app/src/main/res/menu/menu_my.xml
+++ b/app/src/main/res/menu/menu_my.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MyActivity">
 
     <item
+        android:id="@+id/definitions"
+        android:icon="@drawable/question_icon"
+        android:title="Definition"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/pick_date"
         android:icon="@drawable/date_icon"
         android:title="Date"
@@ -12,7 +18,4 @@
         android:icon="@drawable/map_icon"
         android:title="Map"
         app:showAsAction="ifRoom"/>
-
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
